--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -6,5 +6,25 @@
     </head>
     <body>
         <h1>Cheesecake</h1>
+        <img src="../images/cheesecake.jpeg" alt="A delicious and creamy cheesecake with strawberries on top">
+        <h2>Philadelphia Classic Cheesecake</h2>
+        <p>Prepare this rich, creamy Philadelphia Classic Cheesecake today!</p>
+        <h3>Ingredients</h3>
+          <ul>
+            <li>1-1/2 cups graham cracker crumbs</li>
+            <li>3 Tbsp. sugar</li>
+            <li>1/3 cup butter or margarine, melted</li>
+            <li>4 pkg. (8 oz. each) PHILADELPHIA Cream Cheese, softened</li>
+            <li>1 cup sugar</li>
+            <li>1 tsp. vanilla</li>
+            <li>4 eggs</li>
+          </ul>
+        <h3>Steps</h3>
+          <ol>
+            <li>Heat oven to 325°F.</li>
+            <li>Combine graham crumbs, 3 Tbsp. sugar and butter; press onto bottom of 9-inch spring-form pan.</li>
+            <li>Beat cream cheese, 1 cup sugar and vanilla with Mixer until blended. Add eggs, 1 at a time, mixing on low speed after each just until blended. Pour over crust.</li>
+            <li>Bake 55 min. or until center is almost set. Run knife around rim of pan to loosen cake; cool before removing rim. Refrigerate cheesecake 4 hours.</li>
+          </ol>
     </body>
 </html>
