--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/cheesecake.html">Cheesecake</a>
+        <ul>
+          <li><a href="./recipes/cheesecake.html">Cheesecake</a></li>
+          <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+          <li><a href="./recipes/salmon.html">Salmon</a></li>
+        </ul>
     </body>
 </html>
